fix : prevent createProfile modal from overflowing screen edges

--- a/src/app/shared/create-profile/create-profile.component.scss
+++ b/src/app/shared/create-profile/create-profile.component.scss
@@ -4,4 +4,6 @@
 form {
   max-width: 540px;
   width: 100%;
+  max-height: 65vh;
+  overflow-y: scroll;
 }
